# starting-ragchatbot-codebase

./: .flake8  CLAUDE.md  frontend-changes.md  pyproject.toml  query_flow_diagram.md
.claude/: settings.local.json
.cursor/: mcp.json
backend/: ai_generator.py  app.py  rag_system.py  search_tools.py
backend/tests/: TEST_RESULTS.md  __init__.py  conftest.py  manual_test_bug.py  test_ai_generator.py  test_api.py  test_course_search_tool.py  test_rag_system.py  verify_fix.py
frontend/: index.html  script.js  style.css
scripts/: format.bat  format.sh  lint.bat  lint.sh  quality-check.bat  quality-check.sh
